--- a/src/css/style.css
+++ b/src/css/style.css
@@ -7,7 +7,7 @@
     --fw-reg: 300;
     --fw-bold: 900;
 
-    --clr-primary: slateblue;
+    --clr-primary: #007bff;
     --clr-light: #fff;
     --clr-dark: #303030;
     --clr-accent: #557aa7;
